# blizzard-api

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  package.json
example/: BUILD.bazel  index.ts
src/: BUILD.bazel  client.ts  endpoints.ts  interfaces.ts  package.json
src/wow/: BUILD.bazel  index.ts  interfaces.ts
tools/: defaults.bzl
