load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//tools:defaults.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["index.ts"],
    deps = [
        "//src",
        "//src/wow",
    ],
)

nodejs_binary(
    name = "example",
    data = [
        ":src",
    ],
    entry_point = ":index.ts",
)
